--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!doctype html>
 <html>
  <head>
-   <title>My Blog</title>
-<link rel="stylesheet" href="style.css">
+   <title>Работы Ямалеевой К.Р.</title>
  </head>
     	<body>
-	<img src="me.jpg" width="180" height="180">
-	<h1>Kamilla Yamaleeva</h1>
-	    <p>"you have as many hours in a day as beyonce"</p>
-	<h2>where you can find me</h2>
+	<h1>Ямалеева Камилла <br>
+	ИИС БИ 1-1
+	</h1>
+	<h2>Работы:</h2>
 	  <ul>
-	   <li> <a href="https://vk.com/kamyamaleeva" target="_blank">vk
+	   <li> <a href="site.html" target="_blank">Сайт-визитка
 </a></li>
-	   <li> <a href="https://www.instagram.com/y.cam.r/" target="_blank">instagram</a></li>
-	   <li> <a href="https://www.tumblr.com/blog/kamillayamaleeva" target="_blank">tumblr</a></li>
+	   <li> <a href="Scale.html" target="_blank">Игра "Сколько лайков?"</a></li>
+	   <li> <a href="DirtyCat.html" target="_blank">Игра "Попробуй помыть кошку!"</a></li>
 	  </ul>
-        <h2>about me</h2>
-           <p1>19 years old. A young woman with high expectations. And with a good sense of humor. Singer, danser, artist, chef on my own kitchen. Spend time reading english literature, watching videos on Youtube and procrastinating. And sometimes I get on with the filming.</p1>
-	<h2>photos of the month</h2>
-	    <img src="flowers.jpg" width="225" hight="300">
-	    <img src="cooking.jpg" width="310" hight="270">
-	    <br>
-            <img src="road.jpg" width="280" hight="280">
-            <img src="sky.jpg" width="236" hight="500">
-	<h2> video of the month</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/lGEY8IulWiA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<h2>music of the month</h2>
-  <p1>Hurts-Hold on to Me</p1> <br>
-  <audio controls>
-    <source src="Hurts - Hold on to Me.mp3" type="audio/mpeg">
-</audio>
-<br>
-  <p1>Ed Sheeran - Perfect</p1> <br>
-  <audio controls>
-    <source src="Ed Sheeran - Perfect.mp3" type="audio/mpeg">
-     </audio>
 	</body>
 	</html>
-<style> </style>
+	<style>
+body
+	{
+	  background: #E6E6FA;
+	  text-align: center;
+	}
+h1
+	{
+	  font-family: Century Gothic, Bookman Old Style;
+	  font-size: 50px;
+	  color: #cc6699;
+	}
+h2
+	{
+	  color: #DB7093;
+	  font-family: Source Sans Pro, Bookman Old Style;
+	  font-size: 30px
+	}
+li
+	{
+	  list-style-type: none;
+	  font-family: Century Gothic, Bookman Old Style;
+	}
+	</style>
+  	 
